--- a/drop.css
+++ b/drop.css
@@ -32,7 +32,7 @@
 }
 
 /* Add a red background color to navbar links on hover */
-.navbar a:hover, .dropdown:hover .dropbtn, .workdrop:hover .workbtn {
+.navbar a:hover, .dropdown:hover .dropbtn, .workdrop:hover .workbtn, .ericdrop:hover, .ericbtn {
   background-color: red;
 }
 
@@ -67,7 +67,7 @@
 }
 
 
-
+/*-------------------------------------------------*/
 
 
 .workdrop {
@@ -85,7 +85,7 @@
   background-color: inherit;
 }
 
-/* Dropdown content (hidden by default) */
+/* workdrop content (hidden by default) */
 .workdrop-content {
   display: none;
   position: absolute;
@@ -95,7 +95,7 @@
   z-index: 1;
 }
 
-/* Links inside the dropdown */
+/* Links inside the workdrop */
 .workdrop-content a {
   float: none;
   color: black;
@@ -112,5 +112,52 @@
 
 /* Show the dropdown menu on hover */
 .workdrop:hover .workdrop-content {
+  display: block;
+}
+
+/*-----------------------------------------------------*/
+
+.ericdrop {
+  float: left;
+  overflow: hidden;
+}
+
+/* Dropdown button */
+.ericdrop .ericbtn {
+  font-size: 16px; 
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+}
+
+/* workdrop content (hidden by default) */
+.ericdrop-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the workdrop */
+.ericdrop-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.ericdrop-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.ericdrop:hover .ericdrop-content {
   display: block;
 }
